tests/agl/rejections/type/opacity_print_fn.agl
def dbl(n: int) -> int = n * 2
print dbl
